# clmm-sdk-v2

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig-base.json
clmm-integration/src/: config.rs  crema.rs  lib.rs
crema_sdk/: tsconfig.json
crema_sdk/src/: clmm.ts  core.ts  quote.ts
integration/jupiter/: package.json  tsconfig-base.json  tsconfig.json
rust/: Cargo.toml
rust/src/: amm.rs  config.rs  crema.rs  error.rs  harness.rs  lib.rs
rust/src/instructions/: mod.rs
rust/src/math/: bn.rs  clmm_math.rs  fee.rs  full_math.rs  mod.rs  sqrt_price.rs  tick_math.rs
rust/src/pair/: fetcher.rs  mod.rs  simulate_swap.rs
rust/src/state/: mod.rs  tick.rs  tick_array_map.rs
rust/src/utils/: mod.rs  sighash.rs
src/: clmmpool-client.ts  context.ts  index.ts  ix.ts  tsconfig.json
src/cli/: cli.ts  utils.ts
src/errors/: errors.ts
src/idls/: clmmpool.json  clmmpool.ts
src/impl/: clmmpool-client-impl.ts  clmmpool-impl.ts  position-impl.ts  util.ts
src/math/: address.ts  clmm.ts  index.ts  percentage.ts  position.ts  swap.ts  tick.ts  utils.ts
src/network/: fetcher.ts  parsing.ts
src/quotes/: index.ts  swap.test.ts
src/types/: client-types.ts  clmmpool.ts  constants.ts  index.ts  ix-types.ts
src/utils/: address-util.ts  ata-utils.ts  clmm.ts  decimal-util.ts  decimal.ts  index.ts  pda.ts  percentage.ts  position.ts  rewarder.ts  swap.ts  tick.ts  token-instructions.ts  token-utils.ts  token.ts  types.ts
tests/: tsconfig.json
tests/instructions/: create_clmmpool.test.ts  create_fee_tier.test.ts  (+11 more)
(+41 files in other folders)
